# employee-future-prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  bentofile.yaml  dev-requirements.txt  dvc.yaml  metrics.csv  params.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: add_colab_badge.yaml  deploy_app.yaml  execute_notebook.yaml  merge.yaml  notebook.yaml  run_tests.yaml  test_code.yaml  test_model.yaml  test_serving.yaml  test_training.yaml  train_model.yaml
application/: requirements.txt
application/src/: create_app.py  create_service.py  save_model_to_bentoml.py
application/tests/: __init__.py  test_create_service.py
config/: main.yaml
config/model/: model1.yaml  model2.yaml
config/process/: process1.yaml  process2.yaml
data/: .gitignore  raw.dvc
data/processed/: features.csv  target.csv
notebooks/: analyze_results.ipynb  params.json
reports/notebooks/: analyze_results.md
src/: create_app.py  helper.py  main.py  process.py  train_model.py
tests/: test_process.py  test_train_model.py
training/src/: evaluate_model.py  helper.py  main.py  process.py  test.py  train_model.py
training/tests/: __init__.py  test_process.py  test_train_model.py
