[tool.poetry]
name = "employee-future-prediction"
version = "0.1.0"
description = ""
authors = ["Khuyen Tran"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
shap = "0.39"
xgboost = "1.4.2"
yellowbrick = "1.2.1"
notebook = "^6.4.10"
mlflow = "^1.25.1"
dagshub = "^0.1.8"
hyperopt = "^0.2.7"
streamlit = "^1.8.1"
patsy = "^0.5.2"
pandera = "^0.10.1"
pytest-steps = "^1.8.0"
numpy = "^1.22.4"
llvmlite = "0.34.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
